Update docs and fix double scroll bar

--- a/server/assets/style.css
+++ b/server/assets/style.css
@@ -158,7 +158,8 @@ del {
 }
 
 .table-wrapper {
-    overflow: auto;
+    overflow-x: auto;
+    overflow-y: hidden;
 }
 
 .table-controls {
